// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 1`] = `
[
  <div
    className="pt-6"
    data-testid="_loading_skeleton"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0 font-museo"
    >
      <div>
        <div
          className="flex justify-center"
        >
          <div
            className="animate-pulse w-[100px] h-[64px] rounded bg-gray-200 dark:bg-gray-700"
          />
        </div>
        <div
          className="animate-pulse w-[60%] mx-auto h-[24px] rounded mt-5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[85%] h-[14px] mt-4 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[90%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[80%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[70%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex mb-2 justify-center "
    >
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[60px] m-1"
      />
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[120px] m-1"
      />
    </div>
    <div
      className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden p-1 w-full h-[3.75rem]"
    />
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 2`] = `
[
  <div
    className="overflow-y-auto pt-6"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0"
    >
      <div
        className="space-y-2"
      >
        <div
          className="flex justify-center"
        >
          <img
            alt="company logo"
            className="!relative object-contain object-center rounded shadow-[0_4px_12px_0_rgba(0,0,0,0.15)]"
            data-nimg="1"
            decoding="async"
            height={64}
            loading="lazy"
            onError={[Function]}
            onLoad={[Function]}
            src="https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=256,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg"
            srcSet="https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=128,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg 1x, https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=256,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg 2x"
            style={
              {
                "backgroundImage": "url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http%3A//www.w3.org/2000/svg' viewBox='0 0 100 64'%3E%3Cfilter id='b' color-interpolation-filters='sRGB'%3E%3CfeGaussianBlur stdDeviation='20'/%3E%3C/filter%3E%3Cimage preserveAspectRatio='none' filter='url(%23b)' x='0' y='0' height='100%25' width='100%25' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mPs7+9bAQAFtwJW4mO4owAAAABJRU5ErkJggg=='/%3E%3C/svg%3E")",
                "backgroundPosition": "50% 50%",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "color": "transparent",
              }
            }
            width={100}
          />
        </div>
        <h2
          className="text-2xl mb-2 font-typography-title-large-weight leading-typography-title-large tracking-typography-title-large text-colour-onSurface-light dark:text-colour-onSurface-dark tablet:font-typography-headline tablet:text-typography-headline tablet:tracking-typography-headline tablet:leading-typography-headline"
        >
          Test Offer
        </h2>
        <p
          className="text-colour-onSurface-light dark:text-colour-onSurface-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light tracking-typography-body-light leading-typography-body-light mt-2 "
        >
          Offer Description
        </p>
        <div
          className="flex flex-wrap justify-center mt-4"
        >
          <button
            className="py-1 px-5 rounded-md transition border-2 text-button-tertiary-default-label-colour-light dark:text-button-tertiary-default-label-colour-dark focus:outline-[#2EB8E6] dark:focus:outline-[#FFFF00] !border-transparent w-fit m-1 mobile:px-0 mobile:py-0 min-h-6 laptop:min-h-fit, text-button-label-font, font-button-label-font font-button-label-font-weight tracking-button-label-font leading-button-label-font"
            onClick={[Function]}
            type="button"
          >
            <div
              className="false flex flex-row"
            >
              <div
                className="my-auto"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-arrow-up-from-bracket "
                  data-icon="arrow-up-from-bracket"
                  data-prefix="fas"
                  data-testid="font-awesome-share-icon"
                  focusable="false"
                  role="img"
                  style={{}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M246.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 109.3V320c0 17.7 14.3 32 32 32s32-14.3 32-32V109.3l73.4 73.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-128-128zM64 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 53 43 96 96 96H352c53 0 96-43 96-96V352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V352z"
                    fill="currentColor"
                    style={{}}
                  />
                </svg>
              </div>
              <span
                className="ml-2"
              >
                Share offer
              </span>
            </div>
          </button>
        </div>
        <div
          className="w-full text-left "
        >
          <div
            className="w-full leading-6"
          >
            <button
              className="flex w-full text-left py-3 px-1 items-center border-b-[0.5px] border-b-accordion-divider-colour-light dark:border-b-accordion-divider-colour-dark border-solid"
              onClick={[Function]}
            >
              <div
                className="w-full"
              >
                <h4
                  className="text-accordion-label-colour-light dark:text-accordion-label-colour-dark font-accordion-label-font text-accordion-label-font font-accordion-label-font-weight tracking-accordion-label-font leading-accordion-label-font"
                >
                  Terms & Conditions
                </h4>
              </div>
              <div
                className="flex max-w-[40px] items-center justify-end text-accordion-icon-colour-light dark:text-accordion-icon-colour-dark"
              >
                <div
                  style={
                    {
                      "height": 15,
                      "width": 15,
                    }
                  }
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.99999 1.33325H7.66666V7.33325H1.66666V8.66659H7.66666V14.6666H8.99999V8.66659H15V7.33325H8.99999V1.33325Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </button>
            <div
              className="duration-200 ease-in-out hidden py-3 break-words whitespace-pre-wrap text-accordion-text-colour-light dark:text-accordion-text-colour-dark font-accordion-text-font text-accordion-text-font font-accordion-text-font-weight tracking-accordion-text-font leading-accordion-text-font"
            >
              <span>
                Must be a Blue Light Card member in order to receive the discount.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex flex-wrap mb-2 justify-center"
    >
      <div
        className="bg-tag-bg-colour-light dark:bg-tag-bg-colour-dark m-1 inline-flex rounded-full px-3 py-1"
      >
        <p
          className="text-tag-label-colour-light dark:text-tag-label-colour-dark font-tag-label-font text-tag-label-font font-tag-label-font-weight tracking-tag-label-font leading-tag-label-font rounded-full whitespace-nowrap flex items-center"
        >
          Online
        </p>
      </div>
      <div
        className="bg-tag-bg-colour-light dark:bg-tag-bg-colour-dark m-1 inline-flex rounded-full px-3 py-1"
      >
        <p
          className="text-tag-label-colour-light dark:text-tag-label-colour-dark font-tag-label-font text-tag-label-font font-tag-label-font-weight tracking-tag-label-font leading-tag-label-font rounded-full whitespace-nowrap flex items-center"
        >
          Expires: 10/12/1998
        </p>
      </div>
    </div>
    <button
      className="w-full z-10 relative w-fit rounded-full overflow-hidden p-1 h-[3.75rem] cursor-pointer"
      data-testid="_sheet_redeem_button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="relative py-2 px-4 rounded-full z-10 h-full w-full flex justify-center items-center bg-gradient-to-b from-colour-primary-gradient-bright-fixed dark:from-colour-primary-gradient-bright-fixed to-colour-primary-gradient-dim-fixed dark:to-colour-primary-gradient-dim-fixed hover:opacity-90 transition-opacity duration-200"
      >
        <span
          className="text-magicButton-default-label-colour dark:text-magicButton-default-label-colour-dark font-magicButton-label-font font-magicButton-label-font-weight text-magicButton-label-font tracking-magicButton-label-font leading-magicButton-label-font"
        >
          Get Discount
        </span>
      </div>
    </button>
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 3`] = `
[
  <div
    className="pt-6"
    data-testid="_loading_skeleton"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0 font-museo"
    >
      <div>
        <div
          className="flex justify-center"
        >
          <div
            className="animate-pulse w-[100px] h-[64px] rounded bg-gray-200 dark:bg-gray-700"
          />
        </div>
        <div
          className="animate-pulse w-[60%] mx-auto h-[24px] rounded mt-5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[85%] h-[14px] mt-4 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[90%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[80%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[70%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex mb-2 justify-center "
    >
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[60px] m-1"
      />
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[120px] m-1"
      />
    </div>
    <div
      className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden p-1 w-full h-[3.75rem]"
    />
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 4`] = `
[
  <div
    className="overflow-y-auto pt-6"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0"
    >
      <div
        className="space-y-2"
      >
        <div
          className="flex justify-center"
        >
          <img
            alt="company logo"
            className="!relative object-contain object-center rounded shadow-[0_4px_12px_0_rgba(0,0,0,0.15)]"
            data-nimg="1"
            decoding="async"
            height={64}
            loading="lazy"
            onError={[Function]}
            onLoad={[Function]}
            src="https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=256,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg"
            srcSet="https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=128,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg 1x, https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=256,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg 2x"
            style={
              {
                "backgroundImage": "url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http%3A//www.w3.org/2000/svg' viewBox='0 0 100 64'%3E%3Cfilter id='b' color-interpolation-filters='sRGB'%3E%3CfeGaussianBlur stdDeviation='20'/%3E%3C/filter%3E%3Cimage preserveAspectRatio='none' filter='url(%23b)' x='0' y='0' height='100%25' width='100%25' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mPs7+9bAQAFtwJW4mO4owAAAABJRU5ErkJggg=='/%3E%3C/svg%3E")",
                "backgroundPosition": "50% 50%",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "color": "transparent",
              }
            }
            width={100}
          />
        </div>
        <h2
          className="text-2xl mb-2 font-typography-title-large-weight leading-typography-title-large tracking-typography-title-large text-colour-onSurface-light dark:text-colour-onSurface-dark tablet:font-typography-headline tablet:text-typography-headline tablet:tracking-typography-headline tablet:leading-typography-headline"
        >
          Test Offer
        </h2>
        <p
          className="text-colour-onSurface-light dark:text-colour-onSurface-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light tracking-typography-body-light leading-typography-body-light mt-2 "
        >
          Offer Description
        </p>
        <div
          className="flex flex-wrap justify-center mt-4"
        >
          <button
            className="py-1 px-5 rounded-md transition border-2 text-button-tertiary-default-label-colour-light dark:text-button-tertiary-default-label-colour-dark focus:outline-[#2EB8E6] dark:focus:outline-[#FFFF00] !border-transparent w-fit m-1 mobile:px-0 mobile:py-0 min-h-6 laptop:min-h-fit, text-button-label-font, font-button-label-font font-button-label-font-weight tracking-button-label-font leading-button-label-font"
            onClick={[Function]}
            type="button"
          >
            <div
              className="false flex flex-row"
            >
              <div
                className="my-auto"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-arrow-up-from-bracket "
                  data-icon="arrow-up-from-bracket"
                  data-prefix="fas"
                  data-testid="font-awesome-share-icon"
                  focusable="false"
                  role="img"
                  style={{}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M246.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 109.3V320c0 17.7 14.3 32 32 32s32-14.3 32-32V109.3l73.4 73.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-128-128zM64 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 53 43 96 96 96H352c53 0 96-43 96-96V352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V352z"
                    fill="currentColor"
                    style={{}}
                  />
                </svg>
              </div>
              <span
                className="ml-2"
              >
                Share offer
              </span>
            </div>
          </button>
        </div>
        <div
          className="w-full text-left "
        >
          <div
            className="w-full leading-6"
          >
            <button
              className="flex w-full text-left py-3 px-1 items-center border-b-[0.5px] border-b-accordion-divider-colour-light dark:border-b-accordion-divider-colour-dark border-solid"
              onClick={[Function]}
            >
              <div
                className="w-full"
              >
                <h4
                  className="text-accordion-label-colour-light dark:text-accordion-label-colour-dark font-accordion-label-font text-accordion-label-font font-accordion-label-font-weight tracking-accordion-label-font leading-accordion-label-font"
                >
                  Terms & Conditions
                </h4>
              </div>
              <div
                className="flex max-w-[40px] items-center justify-end text-accordion-icon-colour-light dark:text-accordion-icon-colour-dark"
              >
                <div
                  style={
                    {
                      "height": 15,
                      "width": 15,
                    }
                  }
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.99999 1.33325H7.66666V7.33325H1.66666V8.66659H7.66666V14.6666H8.99999V8.66659H15V7.33325H8.99999V1.33325Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </button>
            <div
              className="duration-200 ease-in-out hidden py-3 break-words whitespace-pre-wrap text-accordion-text-colour-light dark:text-accordion-text-colour-dark font-accordion-text-font text-accordion-text-font font-accordion-text-font-weight tracking-accordion-text-font leading-accordion-text-font"
            >
              <span>
                Must be a Blue Light Card member in order to receive the discount.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex flex-wrap mb-2 justify-center"
    >
      <div
        className="bg-tag-bg-colour-light dark:bg-tag-bg-colour-dark m-1 inline-flex rounded-full px-3 py-1"
      >
        <p
          className="text-tag-label-colour-light dark:text-tag-label-colour-dark font-tag-label-font text-tag-label-font font-tag-label-font-weight tracking-tag-label-font leading-tag-label-font rounded-full whitespace-nowrap flex items-center"
        >
          Online
        </p>
      </div>
      <div
        className="bg-tag-bg-colour-light dark:bg-tag-bg-colour-dark m-1 inline-flex rounded-full px-3 py-1"
      >
        <p
          className="text-tag-label-colour-light dark:text-tag-label-colour-dark font-tag-label-font text-tag-label-font font-tag-label-font-weight tracking-tag-label-font leading-tag-label-font rounded-full whitespace-nowrap flex items-center"
        >
          Expires: 10/12/1998
        </p>
      </div>
    </div>
    <button
      className="w-full z-10 relative w-fit rounded-full overflow-hidden p-1 h-[3.75rem] cursor-pointer"
      data-testid="_sheet_redeem_button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="relative py-2 px-4 rounded-full z-10 h-full w-full flex justify-center items-center bg-gradient-to-b from-colour-primary-gradient-bright-fixed dark:from-colour-primary-gradient-bright-fixed to-colour-primary-gradient-dim-fixed dark:to-colour-primary-gradient-dim-fixed hover:opacity-90 transition-opacity duration-200"
      >
        <span
          className="text-magicButton-default-label-colour dark:text-magicButton-default-label-colour-dark font-magicButton-label-font font-magicButton-label-font-weight text-magicButton-label-font tracking-magicButton-label-font leading-magicButton-label-font"
        >
          Get Discount
        </span>
      </div>
    </button>
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 5`] = `
[
  <div
    className="pt-6"
    data-testid="_loading_skeleton"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0 font-museo"
    >
      <div>
        <div
          className="flex justify-center"
        >
          <div
            className="animate-pulse w-[100px] h-[64px] rounded bg-gray-200 dark:bg-gray-700"
          />
        </div>
        <div
          className="animate-pulse w-[60%] mx-auto h-[24px] rounded mt-5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[85%] h-[14px] mt-4 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[90%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[80%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[70%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex mb-2 justify-center "
    >
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[60px] m-1"
      />
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[120px] m-1"
      />
    </div>
    <div
      className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden p-1 w-full h-[3.75rem]"
    />
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 6`] = `
[
  <div
    className="overflow-y-auto pt-6"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0"
    >
      <div
        className="space-y-2"
      >
        <div
          className="flex justify-center"
        >
          <img
            alt="company logo"
            className="!relative object-contain object-center rounded shadow-[0_4px_12px_0_rgba(0,0,0,0.15)]"
            data-nimg="1"
            decoding="async"
            height={64}
            loading="lazy"
            onError={[Function]}
            onLoad={[Function]}
            src="https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=256,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg"
            srcSet="https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=128,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg 1x, https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=256,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg 2x"
            style={
              {
                "backgroundImage": "url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http%3A//www.w3.org/2000/svg' viewBox='0 0 100 64'%3E%3Cfilter id='b' color-interpolation-filters='sRGB'%3E%3CfeGaussianBlur stdDeviation='20'/%3E%3C/filter%3E%3Cimage preserveAspectRatio='none' filter='url(%23b)' x='0' y='0' height='100%25' width='100%25' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mPs7+9bAQAFtwJW4mO4owAAAABJRU5ErkJggg=='/%3E%3C/svg%3E")",
                "backgroundPosition": "50% 50%",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "color": "transparent",
              }
            }
            width={100}
          />
        </div>
        <h2
          className="text-2xl mb-2 font-typography-title-large-weight leading-typography-title-large tracking-typography-title-large text-colour-onSurface-light dark:text-colour-onSurface-dark tablet:font-typography-headline tablet:text-typography-headline tablet:tracking-typography-headline tablet:leading-typography-headline"
        >
          Test Offer
        </h2>
        <p
          className="text-colour-onSurface-light dark:text-colour-onSurface-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light tracking-typography-body-light leading-typography-body-light mt-2 "
        >
          Offer Description
        </p>
        <div
          className="flex flex-wrap justify-center mt-4"
        >
          <button
            className="py-1 px-5 rounded-md transition border-2 text-button-tertiary-default-label-colour-light dark:text-button-tertiary-default-label-colour-dark focus:outline-[#2EB8E6] dark:focus:outline-[#FFFF00] !border-transparent w-fit m-1 mobile:px-0 mobile:py-0 min-h-6 laptop:min-h-fit, text-button-label-font, font-button-label-font font-button-label-font-weight tracking-button-label-font leading-button-label-font"
            onClick={[Function]}
            type="button"
          >
            <div
              className="false flex flex-row"
            >
              <div
                className="my-auto"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-arrow-up-from-bracket "
                  data-icon="arrow-up-from-bracket"
                  data-prefix="fas"
                  data-testid="font-awesome-share-icon"
                  focusable="false"
                  role="img"
                  style={{}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M246.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 109.3V320c0 17.7 14.3 32 32 32s32-14.3 32-32V109.3l73.4 73.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-128-128zM64 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 53 43 96 96 96H352c53 0 96-43 96-96V352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V352z"
                    fill="currentColor"
                    style={{}}
                  />
                </svg>
              </div>
              <span
                className="ml-2"
              >
                Share offer
              </span>
            </div>
          </button>
        </div>
        <div
          className="w-full text-left "
        >
          <div
            className="w-full leading-6"
          >
            <button
              className="flex w-full text-left py-3 px-1 items-center border-b-[0.5px] border-b-accordion-divider-colour-light dark:border-b-accordion-divider-colour-dark border-solid"
              onClick={[Function]}
            >
              <div
                className="w-full"
              >
                <h4
                  className="text-accordion-label-colour-light dark:text-accordion-label-colour-dark font-accordion-label-font text-accordion-label-font font-accordion-label-font-weight tracking-accordion-label-font leading-accordion-label-font"
                >
                  Terms & Conditions
                </h4>
              </div>
              <div
                className="flex max-w-[40px] items-center justify-end text-accordion-icon-colour-light dark:text-accordion-icon-colour-dark"
              >
                <div
                  style={
                    {
                      "height": 15,
                      "width": 15,
                    }
                  }
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.99999 1.33325H7.66666V7.33325H1.66666V8.66659H7.66666V14.6666H8.99999V8.66659H15V7.33325H8.99999V1.33325Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </button>
            <div
              className="duration-200 ease-in-out hidden py-3 break-words whitespace-pre-wrap text-accordion-text-colour-light dark:text-accordion-text-colour-dark font-accordion-text-font text-accordion-text-font font-accordion-text-font-weight tracking-accordion-text-font leading-accordion-text-font"
            >
              <span>
                Must be a Blue Light Card member in order to receive the discount.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex flex-wrap mb-2 justify-center"
    >
      <div
        className="bg-tag-bg-colour-light dark:bg-tag-bg-colour-dark m-1 inline-flex rounded-full px-3 py-1"
      >
        <p
          className="text-tag-label-colour-light dark:text-tag-label-colour-dark font-tag-label-font text-tag-label-font font-tag-label-font-weight tracking-tag-label-font leading-tag-label-font rounded-full whitespace-nowrap flex items-center"
        >
          Online
        </p>
      </div>
      <div
        className="bg-tag-bg-colour-light dark:bg-tag-bg-colour-dark m-1 inline-flex rounded-full px-3 py-1"
      >
        <p
          className="text-tag-label-colour-light dark:text-tag-label-colour-dark font-tag-label-font text-tag-label-font font-tag-label-font-weight tracking-tag-label-font leading-tag-label-font rounded-full whitespace-nowrap flex items-center"
        >
          Expires: 10/12/1998
        </p>
      </div>
    </div>
    <button
      className="w-full z-10 relative w-fit rounded-full overflow-hidden p-1 h-[3.75rem] cursor-pointer"
      data-testid="_sheet_redeem_button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="relative py-2 px-4 rounded-full z-10 h-full w-full flex justify-center items-center bg-gradient-to-b from-colour-primary-gradient-bright-fixed dark:from-colour-primary-gradient-bright-fixed to-colour-primary-gradient-dim-fixed dark:to-colour-primary-gradient-dim-fixed hover:opacity-90 transition-opacity duration-200"
      >
        <span
          className="text-magicButton-default-label-colour dark:text-magicButton-default-label-colour-dark font-magicButton-label-font font-magicButton-label-font-weight text-magicButton-label-font tracking-magicButton-label-font leading-magicButton-label-font"
        >
          Get Discount
        </span>
      </div>
    </button>
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 7`] = `
[
  <div
    className="pt-6"
    data-testid="_loading_skeleton"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0 font-museo"
    >
      <div>
        <div
          className="flex justify-center"
        >
          <div
            className="animate-pulse w-[100px] h-[64px] rounded bg-gray-200 dark:bg-gray-700"
          />
        </div>
        <div
          className="animate-pulse w-[60%] mx-auto h-[24px] rounded mt-5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[85%] h-[14px] mt-4 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[90%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[80%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[70%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex mb-2 justify-center "
    >
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[60px] m-1"
      />
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[120px] m-1"
      />
    </div>
    <div
      className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden p-1 w-full h-[3.75rem]"
    />
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 8`] = `
[
  <div
    className="overflow-y-auto pt-6"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0"
    >
      <div
        className="space-y-2"
      >
        <div
          className="flex justify-center"
        >
          <img
            alt="company logo"
            className="!relative object-contain object-center rounded shadow-[0_4px_12px_0_rgba(0,0,0,0.15)]"
            data-nimg="1"
            decoding="async"
            height={64}
            loading="lazy"
            onError={[Function]}
            onLoad={[Function]}
            src="https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=256,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg"
            srcSet="https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=128,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg 1x, https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=256,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg 2x"
            style={
              {
                "backgroundImage": "url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http%3A//www.w3.org/2000/svg' viewBox='0 0 100 64'%3E%3Cfilter id='b' color-interpolation-filters='sRGB'%3E%3CfeGaussianBlur stdDeviation='20'/%3E%3C/filter%3E%3Cimage preserveAspectRatio='none' filter='url(%23b)' x='0' y='0' height='100%25' width='100%25' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mPs7+9bAQAFtwJW4mO4owAAAABJRU5ErkJggg=='/%3E%3C/svg%3E")",
                "backgroundPosition": "50% 50%",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "color": "transparent",
              }
            }
            width={100}
          />
        </div>
        <h2
          className="text-2xl mb-2 font-typography-title-large-weight leading-typography-title-large tracking-typography-title-large text-colour-onSurface-light dark:text-colour-onSurface-dark tablet:font-typography-headline tablet:text-typography-headline tablet:tracking-typography-headline tablet:leading-typography-headline"
        >
          Test Offer
        </h2>
        <p
          className="text-colour-onSurface-light dark:text-colour-onSurface-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light tracking-typography-body-light leading-typography-body-light mt-2 "
        >
          Offer Description
        </p>
        <div
          className="flex flex-wrap justify-center mt-4"
        >
          <button
            className="py-1 px-5 rounded-md transition border-2 text-button-tertiary-default-label-colour-light dark:text-button-tertiary-default-label-colour-dark focus:outline-[#2EB8E6] dark:focus:outline-[#FFFF00] !border-transparent w-fit m-1 mobile:px-0 mobile:py-0 min-h-6 laptop:min-h-fit, text-button-label-font, font-button-label-font font-button-label-font-weight tracking-button-label-font leading-button-label-font"
            onClick={[Function]}
            type="button"
          >
            <div
              className="false flex flex-row"
            >
              <div
                className="my-auto"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-arrow-up-from-bracket "
                  data-icon="arrow-up-from-bracket"
                  data-prefix="fas"
                  data-testid="font-awesome-share-icon"
                  focusable="false"
                  role="img"
                  style={{}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M246.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 109.3V320c0 17.7 14.3 32 32 32s32-14.3 32-32V109.3l73.4 73.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-128-128zM64 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 53 43 96 96 96H352c53 0 96-43 96-96V352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V352z"
                    fill="currentColor"
                    style={{}}
                  />
                </svg>
              </div>
              <span
                className="ml-2"
              >
                Share offer
              </span>
            </div>
          </button>
        </div>
        <div
          className="w-full text-left "
        >
          <div
            className="w-full leading-6"
          >
            <button
              className="flex w-full text-left py-3 px-1 items-center border-b-[0.5px] border-b-accordion-divider-colour-light dark:border-b-accordion-divider-colour-dark border-solid"
              onClick={[Function]}
            >
              <div
                className="w-full"
              >
                <h4
                  className="text-accordion-label-colour-light dark:text-accordion-label-colour-dark font-accordion-label-font text-accordion-label-font font-accordion-label-font-weight tracking-accordion-label-font leading-accordion-label-font"
                >
                  Terms & Conditions
                </h4>
              </div>
              <div
                className="flex max-w-[40px] items-center justify-end text-accordion-icon-colour-light dark:text-accordion-icon-colour-dark"
              >
                <div
                  style={
                    {
                      "height": 15,
                      "width": 15,
                    }
                  }
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.99999 1.33325H7.66666V7.33325H1.66666V8.66659H7.66666V14.6666H8.99999V8.66659H15V7.33325H8.99999V1.33325Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </button>
            <div
              className="duration-200 ease-in-out hidden py-3 break-words whitespace-pre-wrap text-accordion-text-colour-light dark:text-accordion-text-colour-dark font-accordion-text-font text-accordion-text-font font-accordion-text-font-weight tracking-accordion-text-font leading-accordion-text-font"
            >
              <span>
                Must be a Blue Light Card member in order to receive the discount.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="transition-all flex items-center justify-center flex-col flex-1 blur-lg"
  >
    <svg
      height={200}
      viewBox="0 0 21 21"
      width={200}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="       M 7 0 l 1 0 0 1 -1 0 Z  M 9 0 l 1 0 0 1 -1 0 Z    M 13 0 l 1 0 0 1 -1 0 Z         M 1 1 l 1 0 0 1 -1 0 Z M 2 1 l 1 0 0 1 -1 0 Z M 3 1 l 1 0 0 1 -1 0 Z M 4 1 l 1 0 0 1 -1 0 Z M 5 1 l 1 0 0 1 -1 0 Z  M 7 1 l 1 0 0 1 -1 0 Z M 8 1 l 1 0 0 1 -1 0 Z M 9 1 l 1 0 0 1 -1 0 Z   M 12 1 l 1 0 0 1 -1 0 Z M 13 1 l 1 0 0 1 -1 0 Z  M 15 1 l 1 0 0 1 -1 0 Z M 16 1 l 1 0 0 1 -1 0 Z M 17 1 l 1 0 0 1 -1 0 Z M 18 1 l 1 0 0 1 -1 0 Z M 19 1 l 1 0 0 1 -1 0 Z   M 1 2 l 1 0 0 1 -1 0 Z    M 5 2 l 1 0 0 1 -1 0 Z  M 7 2 l 1 0 0 1 -1 0 Z   M 10 2 l 1 0 0 1 -1 0 Z  M 12 2 l 1 0 0 1 -1 0 Z M 13 2 l 1 0 0 1 -1 0 Z  M 15 2 l 1 0 0 1 -1 0 Z    M 19 2 l 1 0 0 1 -1 0 Z   M 1 3 l 1 0 0 1 -1 0 Z    M 5 3 l 1 0 0 1 -1 0 Z  M 7 3 l 1 0 0 1 -1 0 Z   M 10 3 l 1 0 0 1 -1 0 Z M 11 3 l 1 0 0 1 -1 0 Z  M 13 3 l 1 0 0 1 -1 0 Z  M 15 3 l 1 0 0 1 -1 0 Z    M 19 3 l 1 0 0 1 -1 0 Z   M 1 4 l 1 0 0 1 -1 0 Z    M 5 4 l 1 0 0 1 -1 0 Z  M 7 4 l 1 0 0 1 -1 0 Z  M 9 4 l 1 0 0 1 -1 0 Z M 10 4 l 1 0 0 1 -1 0 Z  M 12 4 l 1 0 0 1 -1 0 Z M 13 4 l 1 0 0 1 -1 0 Z  M 15 4 l 1 0 0 1 -1 0 Z    M 19 4 l 1 0 0 1 -1 0 Z   M 1 5 l 1 0 0 1 -1 0 Z M 2 5 l 1 0 0 1 -1 0 Z M 3 5 l 1 0 0 1 -1 0 Z M 4 5 l 1 0 0 1 -1 0 Z M 5 5 l 1 0 0 1 -1 0 Z  M 7 5 l 1 0 0 1 -1 0 Z M 8 5 l 1 0 0 1 -1 0 Z     M 13 5 l 1 0 0 1 -1 0 Z  M 15 5 l 1 0 0 1 -1 0 Z M 16 5 l 1 0 0 1 -1 0 Z M 17 5 l 1 0 0 1 -1 0 Z M 18 5 l 1 0 0 1 -1 0 Z M 19 5 l 1 0 0 1 -1 0 Z         M 7 6 l 1 0 0 1 -1 0 Z  M 9 6 l 1 0 0 1 -1 0 Z  M 11 6 l 1 0 0 1 -1 0 Z  M 13 6 l 1 0 0 1 -1 0 Z        M 0 7 l 1 0 0 1 -1 0 Z M 1 7 l 1 0 0 1 -1 0 Z M 2 7 l 1 0 0 1 -1 0 Z M 3 7 l 1 0 0 1 -1 0 Z M 4 7 l 1 0 0 1 -1 0 Z M 5 7 l 1 0 0 1 -1 0 Z M 6 7 l 1 0 0 1 -1 0 Z M 7 7 l 1 0 0 1 -1 0 Z M 8 7 l 1 0 0 1 -1 0 Z M 9 7 l 1 0 0 1 -1 0 Z M 10 7 l 1 0 0 1 -1 0 Z   M 13 7 l 1 0 0 1 -1 0 Z M 14 7 l 1 0 0 1 -1 0 Z M 15 7 l 1 0 0 1 -1 0 Z M 16 7 l 1 0 0 1 -1 0 Z M 17 7 l 1 0 0 1 -1 0 Z M 18 7 l 1 0 0 1 -1 0 Z M 19 7 l 1 0 0 1 -1 0 Z M 20 7 l 1 0 0 1 -1 0 Z     M 4 8 l 1 0 0 1 -1 0 Z M 5 8 l 1 0 0 1 -1 0 Z  M 7 8 l 1 0 0 1 -1 0 Z       M 14 8 l 1 0 0 1 -1 0 Z M 15 8 l 1 0 0 1 -1 0 Z    M 19 8 l 1 0 0 1 -1 0 Z    M 2 9 l 1 0 0 1 -1 0 Z   M 5 9 l 1 0 0 1 -1 0 Z M 6 9 l 1 0 0 1 -1 0 Z   M 9 9 l 1 0 0 1 -1 0 Z M 10 9 l 1 0 0 1 -1 0 Z      M 16 9 l 1 0 0 1 -1 0 Z  M 18 9 l 1 0 0 1 -1 0 Z M 19 9 l 1 0 0 1 -1 0 Z    M 2 10 l 1 0 0 1 -1 0 Z     M 7 10 l 1 0 0 1 -1 0 Z   M 10 10 l 1 0 0 1 -1 0 Z  M 12 10 l 1 0 0 1 -1 0 Z M 13 10 l 1 0 0 1 -1 0 Z M 14 10 l 1 0 0 1 -1 0 Z M 15 10 l 1 0 0 1 -1 0 Z M 16 10 l 1 0 0 1 -1 0 Z M 17 10 l 1 0 0 1 -1 0 Z    M 0 11 l 1 0 0 1 -1 0 Z      M 6 11 l 1 0 0 1 -1 0 Z M 7 11 l 1 0 0 1 -1 0 Z  M 9 11 l 1 0 0 1 -1 0 Z   M 12 11 l 1 0 0 1 -1 0 Z M 13 11 l 1 0 0 1 -1 0 Z   M 16 11 l 1 0 0 1 -1 0 Z  M 18 11 l 1 0 0 1 -1 0 Z  M 20 11 l 1 0 0 1 -1 0 Z  M 1 12 l 1 0 0 1 -1 0 Z  M 3 12 l 1 0 0 1 -1 0 Z M 4 12 l 1 0 0 1 -1 0 Z M 5 12 l 1 0 0 1 -1 0 Z  M 7 12 l 1 0 0 1 -1 0 Z    M 11 12 l 1 0 0 1 -1 0 Z  M 13 12 l 1 0 0 1 -1 0 Z M 14 12 l 1 0 0 1 -1 0 Z M 15 12 l 1 0 0 1 -1 0 Z M 16 12 l 1 0 0 1 -1 0 Z M 17 12 l 1 0 0 1 -1 0 Z M 18 12 l 1 0 0 1 -1 0 Z   M 0 13 l 1 0 0 1 -1 0 Z M 1 13 l 1 0 0 1 -1 0 Z M 2 13 l 1 0 0 1 -1 0 Z M 3 13 l 1 0 0 1 -1 0 Z M 4 13 l 1 0 0 1 -1 0 Z M 5 13 l 1 0 0 1 -1 0 Z M 6 13 l 1 0 0 1 -1 0 Z M 7 13 l 1 0 0 1 -1 0 Z  M 9 13 l 1 0 0 1 -1 0 Z   M 12 13 l 1 0 0 1 -1 0 Z M 13 13 l 1 0 0 1 -1 0 Z  M 15 13 l 1 0 0 1 -1 0 Z   M 18 13 l 1 0 0 1 -1 0 Z M 19 13 l 1 0 0 1 -1 0 Z M 20 13 l 1 0 0 1 -1 0 Z        M 7 14 l 1 0 0 1 -1 0 Z M 8 14 l 1 0 0 1 -1 0 Z  M 10 14 l 1 0 0 1 -1 0 Z   M 13 14 l 1 0 0 1 -1 0 Z M 14 14 l 1 0 0 1 -1 0 Z    M 18 14 l 1 0 0 1 -1 0 Z M 19 14 l 1 0 0 1 -1 0 Z M 20 14 l 1 0 0 1 -1 0 Z  M 1 15 l 1 0 0 1 -1 0 Z M 2 15 l 1 0 0 1 -1 0 Z M 3 15 l 1 0 0 1 -1 0 Z M 4 15 l 1 0 0 1 -1 0 Z M 5 15 l 1 0 0 1 -1 0 Z  M 7 15 l 1 0 0 1 -1 0 Z M 8 15 l 1 0 0 1 -1 0 Z  M 10 15 l 1 0 0 1 -1 0 Z M 11 15 l 1 0 0 1 -1 0 Z M 12 15 l 1 0 0 1 -1 0 Z M 13 15 l 1 0 0 1 -1 0 Z M 14 15 l 1 0 0 1 -1 0 Z        M 1 16 l 1 0 0 1 -1 0 Z    M 5 16 l 1 0 0 1 -1 0 Z  M 7 16 l 1 0 0 1 -1 0 Z M 8 16 l 1 0 0 1 -1 0 Z M 9 16 l 1 0 0 1 -1 0 Z M 10 16 l 1 0 0 1 -1 0 Z M 11 16 l 1 0 0 1 -1 0 Z           M 1 17 l 1 0 0 1 -1 0 Z    M 5 17 l 1 0 0 1 -1 0 Z  M 7 17 l 1 0 0 1 -1 0 Z   M 10 17 l 1 0 0 1 -1 0 Z  M 12 17 l 1 0 0 1 -1 0 Z M 13 17 l 1 0 0 1 -1 0 Z  M 15 17 l 1 0 0 1 -1 0 Z M 16 17 l 1 0 0 1 -1 0 Z  M 18 17 l 1 0 0 1 -1 0 Z  M 20 17 l 1 0 0 1 -1 0 Z  M 1 18 l 1 0 0 1 -1 0 Z    M 5 18 l 1 0 0 1 -1 0 Z  M 7 18 l 1 0 0 1 -1 0 Z    M 11 18 l 1 0 0 1 -1 0 Z  M 13 18 l 1 0 0 1 -1 0 Z  M 15 18 l 1 0 0 1 -1 0 Z M 16 18 l 1 0 0 1 -1 0 Z M 17 18 l 1 0 0 1 -1 0 Z  M 19 18 l 1 0 0 1 -1 0 Z M 20 18 l 1 0 0 1 -1 0 Z  M 1 19 l 1 0 0 1 -1 0 Z M 2 19 l 1 0 0 1 -1 0 Z M 3 19 l 1 0 0 1 -1 0 Z M 4 19 l 1 0 0 1 -1 0 Z M 5 19 l 1 0 0 1 -1 0 Z  M 7 19 l 1 0 0 1 -1 0 Z    M 11 19 l 1 0 0 1 -1 0 Z M 12 19 l 1 0 0 1 -1 0 Z  M 14 19 l 1 0 0 1 -1 0 Z  M 16 19 l 1 0 0 1 -1 0 Z M 17 19 l 1 0 0 1 -1 0 Z M 18 19 l 1 0 0 1 -1 0 Z M 19 19 l 1 0 0 1 -1 0 Z         M 7 20 l 1 0 0 1 -1 0 Z  M 9 20 l 1 0 0 1 -1 0 Z M 10 20 l 1 0 0 1 -1 0 Z M 11 20 l 1 0 0 1 -1 0 Z M 12 20 l 1 0 0 1 -1 0 Z  M 14 20 l 1 0 0 1 -1 0 Z M 15 20 l 1 0 0 1 -1 0 Z M 16 20 l 1 0 0 1 -1 0 Z M 17 20 l 1 0 0 1 -1 0 Z  M 19 20 l 1 0 0 1 -1 0 Z M 20 20 l 1 0 0 1 -1 0 Z"
        fill="#FFFFFF"
      />
      <path
        d="M 0 0 l 1 0 0 1 -1 0 Z M 1 0 l 1 0 0 1 -1 0 Z M 2 0 l 1 0 0 1 -1 0 Z M 3 0 l 1 0 0 1 -1 0 Z M 4 0 l 1 0 0 1 -1 0 Z M 5 0 l 1 0 0 1 -1 0 Z M 6 0 l 1 0 0 1 -1 0 Z  M 8 0 l 1 0 0 1 -1 0 Z  M 10 0 l 1 0 0 1 -1 0 Z M 11 0 l 1 0 0 1 -1 0 Z M 12 0 l 1 0 0 1 -1 0 Z  M 14 0 l 1 0 0 1 -1 0 Z M 15 0 l 1 0 0 1 -1 0 Z M 16 0 l 1 0 0 1 -1 0 Z M 17 0 l 1 0 0 1 -1 0 Z M 18 0 l 1 0 0 1 -1 0 Z M 19 0 l 1 0 0 1 -1 0 Z M 20 0 l 1 0 0 1 -1 0 Z M 0 1 l 1 0 0 1 -1 0 Z      M 6 1 l 1 0 0 1 -1 0 Z    M 10 1 l 1 0 0 1 -1 0 Z M 11 1 l 1 0 0 1 -1 0 Z   M 14 1 l 1 0 0 1 -1 0 Z      M 20 1 l 1 0 0 1 -1 0 Z M 0 2 l 1 0 0 1 -1 0 Z  M 2 2 l 1 0 0 1 -1 0 Z M 3 2 l 1 0 0 1 -1 0 Z M 4 2 l 1 0 0 1 -1 0 Z  M 6 2 l 1 0 0 1 -1 0 Z  M 8 2 l 1 0 0 1 -1 0 Z M 9 2 l 1 0 0 1 -1 0 Z  M 11 2 l 1 0 0 1 -1 0 Z   M 14 2 l 1 0 0 1 -1 0 Z  M 16 2 l 1 0 0 1 -1 0 Z M 17 2 l 1 0 0 1 -1 0 Z M 18 2 l 1 0 0 1 -1 0 Z  M 20 2 l 1 0 0 1 -1 0 Z M 0 3 l 1 0 0 1 -1 0 Z  M 2 3 l 1 0 0 1 -1 0 Z M 3 3 l 1 0 0 1 -1 0 Z M 4 3 l 1 0 0 1 -1 0 Z  M 6 3 l 1 0 0 1 -1 0 Z  M 8 3 l 1 0 0 1 -1 0 Z M 9 3 l 1 0 0 1 -1 0 Z   M 12 3 l 1 0 0 1 -1 0 Z  M 14 3 l 1 0 0 1 -1 0 Z  M 16 3 l 1 0 0 1 -1 0 Z M 17 3 l 1 0 0 1 -1 0 Z M 18 3 l 1 0 0 1 -1 0 Z  M 20 3 l 1 0 0 1 -1 0 Z M 0 4 l 1 0 0 1 -1 0 Z  M 2 4 l 1 0 0 1 -1 0 Z M 3 4 l 1 0 0 1 -1 0 Z M 4 4 l 1 0 0 1 -1 0 Z  M 6 4 l 1 0 0 1 -1 0 Z  M 8 4 l 1 0 0 1 -1 0 Z   M 11 4 l 1 0 0 1 -1 0 Z   M 14 4 l 1 0 0 1 -1 0 Z  M 16 4 l 1 0 0 1 -1 0 Z M 17 4 l 1 0 0 1 -1 0 Z M 18 4 l 1 0 0 1 -1 0 Z  M 20 4 l 1 0 0 1 -1 0 Z M 0 5 l 1 0 0 1 -1 0 Z      M 6 5 l 1 0 0 1 -1 0 Z   M 9 5 l 1 0 0 1 -1 0 Z M 10 5 l 1 0 0 1 -1 0 Z M 11 5 l 1 0 0 1 -1 0 Z M 12 5 l 1 0 0 1 -1 0 Z  M 14 5 l 1 0 0 1 -1 0 Z      M 20 5 l 1 0 0 1 -1 0 Z M 0 6 l 1 0 0 1 -1 0 Z M 1 6 l 1 0 0 1 -1 0 Z M 2 6 l 1 0 0 1 -1 0 Z M 3 6 l 1 0 0 1 -1 0 Z M 4 6 l 1 0 0 1 -1 0 Z M 5 6 l 1 0 0 1 -1 0 Z M 6 6 l 1 0 0 1 -1 0 Z  M 8 6 l 1 0 0 1 -1 0 Z  M 10 6 l 1 0 0 1 -1 0 Z  M 12 6 l 1 0 0 1 -1 0 Z  M 14 6 l 1 0 0 1 -1 0 Z M 15 6 l 1 0 0 1 -1 0 Z M 16 6 l 1 0 0 1 -1 0 Z M 17 6 l 1 0 0 1 -1 0 Z M 18 6 l 1 0 0 1 -1 0 Z M 19 6 l 1 0 0 1 -1 0 Z M 20 6 l 1 0 0 1 -1 0 Z            M 11 7 l 1 0 0 1 -1 0 Z M 12 7 l 1 0 0 1 -1 0 Z         M 0 8 l 1 0 0 1 -1 0 Z M 1 8 l 1 0 0 1 -1 0 Z M 2 8 l 1 0 0 1 -1 0 Z M 3 8 l 1 0 0 1 -1 0 Z   M 6 8 l 1 0 0 1 -1 0 Z  M 8 8 l 1 0 0 1 -1 0 Z M 9 8 l 1 0 0 1 -1 0 Z M 10 8 l 1 0 0 1 -1 0 Z M 11 8 l 1 0 0 1 -1 0 Z M 12 8 l 1 0 0 1 -1 0 Z M 13 8 l 1 0 0 1 -1 0 Z   M 16 8 l 1 0 0 1 -1 0 Z M 17 8 l 1 0 0 1 -1 0 Z M 18 8 l 1 0 0 1 -1 0 Z  M 20 8 l 1 0 0 1 -1 0 Z M 0 9 l 1 0 0 1 -1 0 Z M 1 9 l 1 0 0 1 -1 0 Z  M 3 9 l 1 0 0 1 -1 0 Z M 4 9 l 1 0 0 1 -1 0 Z   M 7 9 l 1 0 0 1 -1 0 Z M 8 9 l 1 0 0 1 -1 0 Z   M 11 9 l 1 0 0 1 -1 0 Z M 12 9 l 1 0 0 1 -1 0 Z M 13 9 l 1 0 0 1 -1 0 Z M 14 9 l 1 0 0 1 -1 0 Z M 15 9 l 1 0 0 1 -1 0 Z  M 17 9 l 1 0 0 1 -1 0 Z   M 20 9 l 1 0 0 1 -1 0 Z M 0 10 l 1 0 0 1 -1 0 Z M 1 10 l 1 0 0 1 -1 0 Z  M 3 10 l 1 0 0 1 -1 0 Z M 4 10 l 1 0 0 1 -1 0 Z M 5 10 l 1 0 0 1 -1 0 Z M 6 10 l 1 0 0 1 -1 0 Z  M 8 10 l 1 0 0 1 -1 0 Z M 9 10 l 1 0 0 1 -1 0 Z  M 11 10 l 1 0 0 1 -1 0 Z       M 18 10 l 1 0 0 1 -1 0 Z M 19 10 l 1 0 0 1 -1 0 Z M 20 10 l 1 0 0 1 -1 0 Z  M 1 11 l 1 0 0 1 -1 0 Z M 2 11 l 1 0 0 1 -1 0 Z M 3 11 l 1 0 0 1 -1 0 Z M 4 11 l 1 0 0 1 -1 0 Z M 5 11 l 1 0 0 1 -1 0 Z   M 8 11 l 1 0 0 1 -1 0 Z  M 10 11 l 1 0 0 1 -1 0 Z M 11 11 l 1 0 0 1 -1 0 Z   M 14 11 l 1 0 0 1 -1 0 Z M 15 11 l 1 0 0 1 -1 0 Z  M 17 11 l 1 0 0 1 -1 0 Z  M 19 11 l 1 0 0 1 -1 0 Z  M 0 12 l 1 0 0 1 -1 0 Z  M 2 12 l 1 0 0 1 -1 0 Z    M 6 12 l 1 0 0 1 -1 0 Z  M 8 12 l 1 0 0 1 -1 0 Z M 9 12 l 1 0 0 1 -1 0 Z M 10 12 l 1 0 0 1 -1 0 Z  M 12 12 l 1 0 0 1 -1 0 Z       M 19 12 l 1 0 0 1 -1 0 Z M 20 12 l 1 0 0 1 -1 0 Z         M 8 13 l 1 0 0 1 -1 0 Z  M 10 13 l 1 0 0 1 -1 0 Z M 11 13 l 1 0 0 1 -1 0 Z   M 14 13 l 1 0 0 1 -1 0 Z  M 16 13 l 1 0 0 1 -1 0 Z M 17 13 l 1 0 0 1 -1 0 Z    M 0 14 l 1 0 0 1 -1 0 Z M 1 14 l 1 0 0 1 -1 0 Z M 2 14 l 1 0 0 1 -1 0 Z M 3 14 l 1 0 0 1 -1 0 Z M 4 14 l 1 0 0 1 -1 0 Z M 5 14 l 1 0 0 1 -1 0 Z M 6 14 l 1 0 0 1 -1 0 Z   M 9 14 l 1 0 0 1 -1 0 Z  M 11 14 l 1 0 0 1 -1 0 Z M 12 14 l 1 0 0 1 -1 0 Z   M 15 14 l 1 0 0 1 -1 0 Z M 16 14 l 1 0 0 1 -1 0 Z M 17 14 l 1 0 0 1 -1 0 Z    M 0 15 l 1 0 0 1 -1 0 Z      M 6 15 l 1 0 0 1 -1 0 Z   M 9 15 l 1 0 0 1 -1 0 Z      M 15 15 l 1 0 0 1 -1 0 Z M 16 15 l 1 0 0 1 -1 0 Z M 17 15 l 1 0 0 1 -1 0 Z M 18 15 l 1 0 0 1 -1 0 Z M 19 15 l 1 0 0 1 -1 0 Z M 20 15 l 1 0 0 1 -1 0 Z M 0 16 l 1 0 0 1 -1 0 Z  M 2 16 l 1 0 0 1 -1 0 Z M 3 16 l 1 0 0 1 -1 0 Z M 4 16 l 1 0 0 1 -1 0 Z  M 6 16 l 1 0 0 1 -1 0 Z      M 12 16 l 1 0 0 1 -1 0 Z M 13 16 l 1 0 0 1 -1 0 Z M 14 16 l 1 0 0 1 -1 0 Z M 15 16 l 1 0 0 1 -1 0 Z M 16 16 l 1 0 0 1 -1 0 Z M 17 16 l 1 0 0 1 -1 0 Z M 18 16 l 1 0 0 1 -1 0 Z M 19 16 l 1 0 0 1 -1 0 Z M 20 16 l 1 0 0 1 -1 0 Z M 0 17 l 1 0 0 1 -1 0 Z  M 2 17 l 1 0 0 1 -1 0 Z M 3 17 l 1 0 0 1 -1 0 Z M 4 17 l 1 0 0 1 -1 0 Z  M 6 17 l 1 0 0 1 -1 0 Z  M 8 17 l 1 0 0 1 -1 0 Z M 9 17 l 1 0 0 1 -1 0 Z  M 11 17 l 1 0 0 1 -1 0 Z   M 14 17 l 1 0 0 1 -1 0 Z   M 17 17 l 1 0 0 1 -1 0 Z  M 19 17 l 1 0 0 1 -1 0 Z  M 0 18 l 1 0 0 1 -1 0 Z  M 2 18 l 1 0 0 1 -1 0 Z M 3 18 l 1 0 0 1 -1 0 Z M 4 18 l 1 0 0 1 -1 0 Z  M 6 18 l 1 0 0 1 -1 0 Z  M 8 18 l 1 0 0 1 -1 0 Z M 9 18 l 1 0 0 1 -1 0 Z M 10 18 l 1 0 0 1 -1 0 Z  M 12 18 l 1 0 0 1 -1 0 Z  M 14 18 l 1 0 0 1 -1 0 Z    M 18 18 l 1 0 0 1 -1 0 Z   M 0 19 l 1 0 0 1 -1 0 Z      M 6 19 l 1 0 0 1 -1 0 Z  M 8 19 l 1 0 0 1 -1 0 Z M 9 19 l 1 0 0 1 -1 0 Z M 10 19 l 1 0 0 1 -1 0 Z   M 13 19 l 1 0 0 1 -1 0 Z  M 15 19 l 1 0 0 1 -1 0 Z     M 20 19 l 1 0 0 1 -1 0 Z M 0 20 l 1 0 0 1 -1 0 Z M 1 20 l 1 0 0 1 -1 0 Z M 2 20 l 1 0 0 1 -1 0 Z M 3 20 l 1 0 0 1 -1 0 Z M 4 20 l 1 0 0 1 -1 0 Z M 5 20 l 1 0 0 1 -1 0 Z M 6 20 l 1 0 0 1 -1 0 Z  M 8 20 l 1 0 0 1 -1 0 Z     M 13 20 l 1 0 0 1 -1 0 Z     M 18 20 l 1 0 0 1 -1 0 Z  "
        fill="#000000"
      />
    </svg>
    <h1
      className="text-colour-onSurface-light dark:text-colour-onSurface-dark font-typography-body-semibold font-typography-body-semibold-weight text-typography-body-semibold tracking-typography-body-semibold leading-typography-body-semibold pt-4 pb-2"
    >
      loading
    </h1>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex flex-wrap mb-2 justify-center"
    >
      <div
        className="bg-tag-bg-colour-light dark:bg-tag-bg-colour-dark m-1 inline-flex rounded-full px-3 py-1"
      >
        <p
          className="text-tag-label-colour-light dark:text-tag-label-colour-dark font-tag-label-font text-tag-label-font font-tag-label-font-weight tracking-tag-label-font leading-tag-label-font rounded-full whitespace-nowrap flex items-center"
        >
          Online
        </p>
      </div>
      <div
        className="bg-tag-bg-colour-light dark:bg-tag-bg-colour-dark m-1 inline-flex rounded-full px-3 py-1"
      >
        <p
          className="text-tag-label-colour-light dark:text-tag-label-colour-dark font-tag-label-font text-tag-label-font font-tag-label-font-weight tracking-tag-label-font leading-tag-label-font rounded-full whitespace-nowrap flex items-center"
        >
          Expires: 10/12/1998
        </p>
      </div>
    </div>
    <button
      className="w-full z-10 relative w-fit rounded-full overflow-hidden p-1 h-[3.75rem] cursor-pointer"
      data-testid="_sheet_redeem_button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="relative py-2 px-4 rounded-full z-10 h-full w-full flex justify-center items-center bg-gradient-to-b from-colour-primary-gradient-bright-fixed dark:from-colour-primary-gradient-bright-fixed to-colour-primary-gradient-dim-fixed dark:to-colour-primary-gradient-dim-fixed hover:opacity-90 transition-opacity duration-200"
      >
        <span
          className="text-magicButton-default-label-colour dark:text-magicButton-default-label-colour-dark font-magicButton-label-font font-magicButton-label-font-weight text-magicButton-label-font tracking-magicButton-label-font leading-magicButton-label-font"
        >
          Show QR code
        </span>
      </div>
    </button>
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 9`] = `
[
  <div
    className="pt-6"
    data-testid="_loading_skeleton"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0 font-museo"
    >
      <div>
        <div
          className="flex justify-center"
        >
          <div
            className="animate-pulse w-[100px] h-[64px] rounded bg-gray-200 dark:bg-gray-700"
          />
        </div>
        <div
          className="animate-pulse w-[60%] mx-auto h-[24px] rounded mt-5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[85%] h-[14px] mt-4 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[90%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[80%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[70%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex mb-2 justify-center "
    >
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[60px] m-1"
      />
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[120px] m-1"
      />
    </div>
    <div
      className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden p-1 w-full h-[3.75rem]"
    />
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 10`] = `
[
  <div
    className="overflow-y-auto pt-6"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0"
    >
      <div
        className="space-y-2"
      >
        <div
          className="flex justify-center"
        >
          <img
            alt="company logo"
            className="!relative object-contain object-center rounded shadow-[0_4px_12px_0_rgba(0,0,0,0.15)]"
            data-nimg="1"
            decoding="async"
            height={64}
            loading="lazy"
            onError={[Function]}
            onLoad={[Function]}
            src="https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=256,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg"
            srcSet="https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=128,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg 1x, https://cdn.bluelightcard.co.uk/cdn-cgi/image/width=256,quality=75,format=webp/https://cdn.bluelightcard.co.uk/companyimages/complarge/retina/5319.jpg 2x"
            style={
              {
                "backgroundImage": "url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http%3A//www.w3.org/2000/svg' viewBox='0 0 100 64'%3E%3Cfilter id='b' color-interpolation-filters='sRGB'%3E%3CfeGaussianBlur stdDeviation='20'/%3E%3C/filter%3E%3Cimage preserveAspectRatio='none' filter='url(%23b)' x='0' y='0' height='100%25' width='100%25' href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mPs7+9bAQAFtwJW4mO4owAAAABJRU5ErkJggg=='/%3E%3C/svg%3E")",
                "backgroundPosition": "50% 50%",
                "backgroundRepeat": "no-repeat",
                "backgroundSize": "cover",
                "color": "transparent",
              }
            }
            width={100}
          />
        </div>
        <h2
          className="text-2xl mb-2 font-typography-title-large-weight leading-typography-title-large tracking-typography-title-large text-colour-onSurface-light dark:text-colour-onSurface-dark tablet:font-typography-headline tablet:text-typography-headline tablet:tracking-typography-headline tablet:leading-typography-headline"
        >
          Test Offer
        </h2>
        <p
          className="text-colour-onSurface-light dark:text-colour-onSurface-dark font-typography-body-light font-typography-body-light-weight text-typography-body-light tracking-typography-body-light leading-typography-body-light mt-2 "
        >
          Offer Description
        </p>
        <div
          className="flex flex-wrap justify-center mt-4"
        >
          <button
            className="py-1 px-5 rounded-md transition border-2 text-button-tertiary-default-label-colour-light dark:text-button-tertiary-default-label-colour-dark focus:outline-[#2EB8E6] dark:focus:outline-[#FFFF00] !border-transparent w-fit m-1 mobile:px-0 mobile:py-0 min-h-6 laptop:min-h-fit, text-button-label-font, font-button-label-font font-button-label-font-weight tracking-button-label-font leading-button-label-font"
            onClick={[Function]}
            type="button"
          >
            <div
              className="false flex flex-row"
            >
              <div
                className="my-auto"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-arrow-up-from-bracket "
                  data-icon="arrow-up-from-bracket"
                  data-prefix="fas"
                  data-testid="font-awesome-share-icon"
                  focusable="false"
                  role="img"
                  style={{}}
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M246.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 109.3V320c0 17.7 14.3 32 32 32s32-14.3 32-32V109.3l73.4 73.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-128-128zM64 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 53 43 96 96 96H352c53 0 96-43 96-96V352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V352z"
                    fill="currentColor"
                    style={{}}
                  />
                </svg>
              </div>
              <span
                className="ml-2"
              >
                Share offer
              </span>
            </div>
          </button>
        </div>
        <div
          className="w-full text-left "
        >
          <div
            className="w-full leading-6"
          >
            <button
              className="flex w-full text-left py-3 px-1 items-center border-b-[0.5px] border-b-accordion-divider-colour-light dark:border-b-accordion-divider-colour-dark border-solid"
              onClick={[Function]}
            >
              <div
                className="w-full"
              >
                <h4
                  className="text-accordion-label-colour-light dark:text-accordion-label-colour-dark font-accordion-label-font text-accordion-label-font font-accordion-label-font-weight tracking-accordion-label-font leading-accordion-label-font"
                >
                  Terms & Conditions
                </h4>
              </div>
              <div
                className="flex max-w-[40px] items-center justify-end text-accordion-icon-colour-light dark:text-accordion-icon-colour-dark"
              >
                <div
                  style={
                    {
                      "height": 15,
                      "width": 15,
                    }
                  }
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.99999 1.33325H7.66666V7.33325H1.66666V8.66659H7.66666V14.6666H8.99999V8.66659H15V7.33325H8.99999V1.33325Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </button>
            <div
              className="duration-200 ease-in-out hidden py-3 break-words whitespace-pre-wrap text-accordion-text-colour-light dark:text-accordion-text-colour-dark font-accordion-text-font text-accordion-text-font font-accordion-text-font-weight tracking-accordion-text-font leading-accordion-text-font"
            >
              <span>
                Must be a Blue Light Card member in order to receive the discount.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex flex-wrap mb-2 justify-center"
    >
      <div
        className="bg-tag-bg-colour-light dark:bg-tag-bg-colour-dark m-1 inline-flex rounded-full px-3 py-1"
      >
        <p
          className="text-tag-label-colour-light dark:text-tag-label-colour-dark font-tag-label-font text-tag-label-font font-tag-label-font-weight tracking-tag-label-font leading-tag-label-font rounded-full whitespace-nowrap flex items-center"
        >
          Online
        </p>
      </div>
      <div
        className="bg-tag-bg-colour-light dark:bg-tag-bg-colour-dark m-1 inline-flex rounded-full px-3 py-1"
      >
        <p
          className="text-tag-label-colour-light dark:text-tag-label-colour-dark font-tag-label-font text-tag-label-font font-tag-label-font-weight tracking-tag-label-font leading-tag-label-font rounded-full whitespace-nowrap flex items-center"
        >
          Expires: 10/12/1998
        </p>
      </div>
    </div>
    <button
      className="w-full z-10 relative w-fit rounded-full overflow-hidden p-1 h-[3.75rem] cursor-pointer"
      data-testid="_sheet_redeem_button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <div
        className="relative py-2 px-4 rounded-full z-10 h-full w-full flex justify-center items-center bg-gradient-to-b from-colour-primary-gradient-bright-fixed dark:from-colour-primary-gradient-bright-fixed to-colour-primary-gradient-dim-fixed dark:to-colour-primary-gradient-dim-fixed hover:opacity-90 transition-opacity duration-200"
      >
        <span
          className="text-magicButton-default-label-colour dark:text-magicButton-default-label-colour-dark font-magicButton-label-font font-magicButton-label-font-weight text-magicButton-label-font tracking-magicButton-label-font leading-magicButton-label-font"
        >
          Show your Blue Light Card in store
        </span>
      </div>
    </button>
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 11`] = `
[
  <div
    className="pt-6"
    data-testid="_loading_skeleton"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0 font-museo"
    >
      <div>
        <div
          className="flex justify-center"
        >
          <div
            className="animate-pulse w-[100px] h-[64px] rounded bg-gray-200 dark:bg-gray-700"
          />
        </div>
        <div
          className="animate-pulse w-[60%] mx-auto h-[24px] rounded mt-5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[85%] h-[14px] mt-4 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[90%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[80%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[70%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex mb-2 justify-center "
    >
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[60px] m-1"
      />
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[120px] m-1"
      />
    </div>
    <div
      className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden p-1 w-full h-[3.75rem]"
    />
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 12`] = `
[
  <div
    className="pt-6"
    data-testid="_loading_skeleton"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0 font-museo"
    >
      <div>
        <div
          className="flex justify-center"
        >
          <div
            className="animate-pulse w-[100px] h-[64px] rounded bg-gray-200 dark:bg-gray-700"
          />
        </div>
        <div
          className="animate-pulse w-[60%] mx-auto h-[24px] rounded mt-5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[85%] h-[14px] mt-4 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[90%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[80%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[70%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex mb-2 justify-center "
    >
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[60px] m-1"
      />
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[120px] m-1"
      />
    </div>
    <div
      className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden p-1 w-full h-[3.75rem]"
    />
  </div>,
]
`;

exports[`New Offer Sheet component should render new offer sheet component for various redemption types 13`] = `
[
  <div
    className="pt-6"
    data-testid="_loading_skeleton"
  >
    <div
      className="flex flex-col text-center text-wrap space-y-2 p-[24px_24px_14px_24px] pt-0 font-museo"
    >
      <div>
        <div
          className="flex justify-center"
        >
          <div
            className="animate-pulse w-[100px] h-[64px] rounded bg-gray-200 dark:bg-gray-700"
          />
        </div>
        <div
          className="animate-pulse w-[60%] mx-auto h-[24px] rounded mt-5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[85%] h-[14px] mt-4 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[90%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[80%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
        <div
          className="animate-pulse rounded-md mx-auto w-[70%] h-[14px] mt-1.5 bg-gray-200 dark:bg-gray-700"
        />
      </div>
    </div>
  </div>,
  <div
    className="sticky bottom-0 mt-auto flex flex-col gap-2 p-4 shadow-offerSheetTop bg-colour-surface dark:bg-colour-surface-dark"
  >
    <div
      className="w-full flex mb-2 justify-center "
    >
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[60px] m-1"
      />
      <div
        className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full h-[26px] w-[120px] m-1"
      />
    </div>
    <div
      className="animate-pulse bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden p-1 w-full h-[3.75rem]"
    />
  </div>,
]
`;
